--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Karitech_Computers</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="js/bootstrap.js"></script>
+    <style>
+         img:hover{
+            transform: scale(1.2);
+            transition: 4s;
+         }
+
+    </style>
 </head>
 <body>
     <div class="container-fluid">
@@ -26,8 +33,8 @@
                  <div class="collapse navbar-collapse " id="navbarcollapse">
                     <div class="navbar-nav">
                     <a href="index.html" class="nav-link active">Home</a>
-                    <a href="" class="nav-link">Macbooks</a>
-                    <a href=""class="nav-link">HP</a>
+                    <a href="macbooks.html" class="nav-link">Macbooks</a>
+                    <a href="hp.html"class="nav-link active">HP</a>
                     </div>
                 </div>
              </nav>
@@ -228,7 +235,6 @@
             <br>
             <p>SanDisk is a well-known brand specializing in reliable digital storage solutions, including USB flash drives, memory cards, and solid-state drives. Its products are designed to deliver fast performance, durability, and secure data storage for everyday users and professionals alike.</p>      
             <p>Trusted worldwide, SanDisk supports everything from photography and videography to gaming and business needs. With a reputation for innovation and quality, the brand continues to make storing, transferring, and protecting data simple and efficient.</p>
-            <b class="text-success">Ksh 5,000</b> <br>
         </div>
      </section>
      <hr>
